match_output.log
=== KiyEngine V5 Match Script ===
🦀 Building KiyEngine V5 (Release)...
   Compiling kiy_engine_v5_alpha v5.0.0 (/home/khoi/Workspace/KiyEngine)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `kiy_engine_v4_omega`
 --> src/main.rs:4:5
  |
4 | use kiy_engine_v4_omega::uci::mcts_handler::MCTSUciHandler;
  |     ^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `kiy_engine_v4_omega`
  |
help: there is a crate or module with a similar name
  |
4 - use kiy_engine_v4_omega::uci::mcts_handler::MCTSUciHandler;
4 + use kiy_engine_v5_alpha::uci::mcts_handler::MCTSUciHandler;
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `kiy_engine_v4_omega`
 --> src/bin/bench.rs:2:5
  |
2 | use kiy_engine_v4_omega::search::lazy_smp::Searcher;
  |     ^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `kiy_engine_v4_omega`
  |
help: there is a crate or module with a similar name
  |
2 - use kiy_engine_v4_omega::search::lazy_smp::Searcher;
2 + use kiy_engine_v5_alpha::search::lazy_smp::Searcher;
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `kiy_engine_v4_omega`
 --> src/bin/bench.rs:3:5
  |
3 | use kiy_engine_v4_omega::search::tt::AtomicTT;
  |     ^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `kiy_engine_v4_omega`
  |
help: there is a crate or module with a similar name
  |
3 - use kiy_engine_v4_omega::search::tt::AtomicTT;
3 + use kiy_engine_v5_alpha::search::tt::AtomicTT;
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `kiy_engine_v4_omega`
 --> src/bin/bench.rs:4:5
  |
4 | use kiy_engine_v4_omega::engine::Engine;
  |     ^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `kiy_engine_v4_omega`
  |
help: there is a crate or module with a similar name
  |
4 - use kiy_engine_v4_omega::engine::Engine;
4 + use kiy_engine_v5_alpha::engine::Engine;
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `kiy_engine_v4_omega`
 --> src/bin/chess_bench.rs:2:5
  |
2 | use kiy_engine_v4_omega::engine::Engine;
  |     ^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `kiy_engine_v4_omega`
  |
help: there is a crate or module with a similar name
  |
2 - use kiy_engine_v4_omega::engine::Engine;
2 + use kiy_engine_v5_alpha::engine::Engine;
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `kiy_engine_v4_omega`
 --> src/bin/chess_bench.rs:3:5
  |
3 | use kiy_engine_v4_omega::search::lazy_smp::Searcher;
  |     ^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `kiy_engine_v4_omega`
  |
help: there is a crate or module with a similar name
  |
3 - use kiy_engine_v4_omega::search::lazy_smp::Searcher;
3 + use kiy_engine_v5_alpha::search::lazy_smp::Searcher;
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `kiy_engine_v4_omega`
 --> src/bin/chess_bench.rs:4:5
  |
4 | use kiy_engine_v4_omega::search::tt::AtomicTT;
  |     ^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `kiy_engine_v4_omega`
  |
help: there is a crate or module with a similar name
  |
4 - use kiy_engine_v4_omega::search::tt::AtomicTT;
4 + use kiy_engine_v5_alpha::search::tt::AtomicTT;
  |

For more information about this error, try `rustc --explain E0433`.
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `kiy_engine_v4_omega`
 --> src/bin/model_benchmark.rs:7:5
  |
7 | use kiy_engine_v4_omega::engine::Engine;
  |     ^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `kiy_engine_v4_omega`
  |
help: there is a crate or module with a similar name
  |
7 - use kiy_engine_v4_omega::engine::Engine;
7 + use kiy_engine_v5_alpha::engine::Engine;
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `kiy_engine_v4_omega`
 --> src/bin/model_benchmark.rs:8:5
  |
8 | use kiy_engine_v4_omega::constants::{DEFAULT_MODEL_PATH, LEGACY_MODEL_PATH};
  |     ^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `kiy_engine_v4_omega`
  |
help: there is a crate or module with a similar name
  |
8 - use kiy_engine_v4_omega::constants::{DEFAULT_MODEL_PATH, LEGACY_MODEL_PATH};
8 + use kiy_engine_v5_alpha::constants::{DEFAULT_MODEL_PATH, LEGACY_MODEL_PATH};
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `kiy_engine_v4_omega`
 --> src/bin/test_inference.rs:1:5
  |
1 | use kiy_engine_v4_omega::engine::Engine;
  |     ^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `kiy_engine_v4_omega`
  |
help: there is a crate or module with a similar name
  |
1 - use kiy_engine_v4_omega::engine::Engine;
1 + use kiy_engine_v5_alpha::engine::Engine;
  |

error: could not compile `kiy_engine_v5_alpha` (bin "kiy_engine_v5_alpha") due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error[E0282]: type annotations needed
  --> src/bin/bench.rs:39:20
   |
39 |     let (tx, rx) = mpsc::channel();
   |                    ^^^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the function `channel`
...
58 |         if msg.starts_with("info") {
   |            --- type must be known at this point
   |
help: consider specifying the generic argument
   |
39 |     let (tx, rx) = mpsc::channel::<T>();
   |                                 +++++

Some errors have detailed explanations: E0282, E0433.
For more information about an error, try `rustc --explain E0282`.
error[E0282]: type annotations needed
  --> src/bin/test_inference.rs:13:28
   |
13 |         let best_move_id = logits.argmax(0)?.to_scalar::<u32>()?;
   |                            ^^^^^^ cannot infer type

error: could not compile `kiy_engine_v5_alpha` (bin "chess_bench") due to 3 previous errors
error: could not compile `kiy_engine_v5_alpha` (bin "bench") due to 4 previous errors
error[E0282]: type annotations needed
  --> src/bin/model_benchmark.rs:99:40
   |
99 |                     let policy_shape = policy.shape().clone();
   |                                        ^^^^^^ cannot infer type

error[E0282]: type annotations needed
   --> src/bin/model_benchmark.rs:132:28
    |
132 |                 let diff = (legacy_val - finetuned_val).abs();
    |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type

error: could not compile `kiy_engine_v5_alpha` (bin "test_inference") due to 2 previous errors
error: could not compile `kiy_engine_v5_alpha` (bin "model_benchmark") due to 4 previous errors
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `kiy_engine_v4_omega`
  --> src/bin/inspect_gguf.rs:18:16
   |
18 |     let gguf = kiy_engine_v4_omega::engine::gguf::GgufFile::from_path(model_path)?;
   |                ^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `kiy_engine_v4_omega`
   |
help: there is a crate or module with a similar name
   |
18 -     let gguf = kiy_engine_v4_omega::engine::gguf::GgufFile::from_path(model_path)?;
18 +     let gguf = kiy_engine_v5_alpha::engine::gguf::GgufFile::from_path(model_path)?;
   |
help: consider importing this struct
   |
 6 + use kiy_engine_v5_alpha::engine::gguf::GgufFile;
   |
help: if you import `GgufFile`, refer to it directly
   |
18 -     let gguf = kiy_engine_v4_omega::engine::gguf::GgufFile::from_path(model_path)?;
18 +     let gguf = GgufFile::from_path(model_path)?;
   |

error[E0282]: type annotations needed
  --> src/bin/inspect_gguf.rs:97:19
   |
97 |             .map(|d| d.to_string())
   |                   ^  - type must be known at this point
   |
help: consider giving this closure parameter an explicit type
   |
97 |             .map(|d: /* Type */| d.to_string())
   |                    ++++++++++++

error: could not compile `kiy_engine_v5_alpha` (bin "inspect_gguf") due to 2 previous errors
